# pre-commit-via-uv

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
pre_commit_via_uv/: uv_run_on_all_files.py
